--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">BlueLightFilter</string>
     <string name="bluelight_filter_level">BlueLight Filter Level</string>
+    <string name="settings_fragment_name">Settings Fragment</string>
+    <string name="home">Home</string>
+    <string name="automated">Automated</string>
+    <string name="manual">Manual</string>
+    <string name="settings">Settings</string>
+    <string name="home_fragment">Home Fragment</string>
 </resources>
