--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,22 @@
 <resources>
-    <string name="app_name">BlueLightFilter</string>
+    <string name="app_name">CobaltBlueLightFilter</string>
     <string name="bluelight_filter_level">BlueLight Filter Level</string>
+
     <string name="settings_fragment_name">Settings Fragment</string>
     <string name="home">Home</string>
     <string name="automated">Automated</string>
     <string name="manual">Manual</string>
+
     <string name="settings">Settings</string>
     <string name="home_fragment">Home Fragment</string>
     <string name="lightsensorvalue">LightSensorValue</string>
+
     <string name="radiobutton0">0%</string>
     <string name="radiobutton25">25%</string>
     <string name="radiobutton50">50%</string>
     <string name="radiobutton75">75%</string>
-    <string name="alphavalue">Transparency</string>
-    <string name="bluevalue">ColdTemperatureColors</string>
-    <string name="redvalue">WarmTemeperatureColors</string>
+
+    <string name="alphavalue">Dim level percent</string>
+    <string name="bluevalue">Cold Colors Levels</string>
+    <string name="redvalue">Warm Colors Level</string>
 </resources>
